[tool.poetry]
name = "budgetto"
version = "0.1.0"
description = "Customisable and flexible budget and investments tracker for personal finance management."
authors = ["Nuno de Paula <nunodepaula@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
